[package]
name = "google_task_manager"
version = "0.1.0"
authors = ["Chris Laidler <cjjlaidler@gmail.com>"]
edition = "2018"

# See more keys and thei.r definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
webbrowser = "0.5.0"
reqwest = "0.9.18"
serde = "1.0"
serde_json = "1.0"
gtk = "0.8.0"
glib = "0.9.0"
gio = "0.8.0"
gdk = "0.12.0"
cascade = "0.1.4"